k8s/db-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-api
  namespace: demo-3tier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-api
  template:
    metadata:
      labels:
        app: db-api
    spec:
      containers:
      - name: db-api
        image: vmunix/demo-db-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: db-api
  namespace: demo-3tier-app
spec:
  type: NodePort
  selector:
    app: db-api
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30000
